# py-solana-cli

./: README.md  pyproject.toml
py_solana_cli/: __main__.py  cli.py
