[tool.poetry]
name = "py_solana_cli"
version = "0.1.0"
description = ""
authors = ["PabloLec <pablo.lecolinet@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
solana = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
